# Zdefender

./: .gitignore  API.md  CHANGELOG.md  Cargo.toml  README.md  README.txt  install.sh  uninstall.sh  zdefender-daemon.sh  zdefender.service
.cargo/: config.toml
config/: config.json
src/: analyzer.rs  benchmark.rs  cli.rs  config.rs  defender.rs  detect_attacks.rs  intelligent_detection.rs  lib.rs  log_mode.rs  logger.rs  main.rs  models.rs  packet_inspection.rs  protection.rs  service.rs  updater.rs
src/api/: mod.rs
src/core/: audit.rs  benchmark.rs  config.rs  encryption.rs  firewall.rs  honeypot.rs  memory.rs  network.rs  threading.rs
src/defender/: connection_manager.rs  ddos_protection.rs  fortress.rs  mod.rs  notifications.rs
src/protection/: blocked_ips.rs  detection.rs  fortress.rs  mod.rs  packet_analyzer.rs  suspend.rs
src/services/: command_handler.rs  mod.rs  network_capture.rs  security.rs  stats.rs  utils.rs
tests/: update_settings_test.rs
