[package]
name = "zdefender"
version = "0.1.3"
edition = "2021"
authors = ["Zeirea"]
description = "Un système de protection contre les attaques DDoS"

[features]
default = []
systemd = ["systemd-journal-logger"]

[dependencies]
tokio = { version = "1.28", features = ["full", "signal"] }
pcap = "2.2.0"
pnet = "0.35.0"
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
env_logger = "0.11.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.1.0"
rand = "0.9.1"
futures = "0.3"
# Dépendance conditionnelle pour systemd-journal-logger
systemd-journal-logger = { version = "2.0.0", optional = true }
anyhow = "1.0.98"
num_cpus = "1.16.0"
num-format = "0.4.4"
async-trait = "0.1.77"
once_cell = "1.21.3"
axum = "0.7"
hyper = { version = "1.0", features = ["full"] }
