[package]
name = "zdefender2"
version = "2.0.0"
edition = "2021"
authors = ["ZDefender Team"]
description = "Système de protection DDoS avancé"

[dependencies]
# Dépendances minimales pour le développement
log = "0.4"
env_logger = "0.10"
libc = "0.2"
nix = "0.26"
tempfile = "3.20.0"
serde_json = "1.0.140"
tokio = "1.45.1"
serde = { version = "1.0.219", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true 